# VGrive

./: .gitignore  .travis.yml  AUTHORS  README.md  meson.build  meson_options.txt  run.sh  run_tests.sh  test_meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
data/: com.github.bcedu.vgrive.appdata.xml.in  com.github.bcedu.vgrive.desktop.in  com.github.bcedu.vgrive.gschema.xml  meson.build
data/resources/: com.github.bcedu.vgrive.css  com.github.bcedu.vgrive.gresource.xml
debian/: changelog  control  copyright
meson/: post_install.py
po/: LINGUAS  POTFILES  README  README.md  ca.po  com.github.bcedu.vgrive.pot  es.po  fr.po  gl.po  it.po  meson.build  nl.po  pl.po  pt_br.po  tr.po  uk.po
src/: Application.vala  Main.vala  VGriveClient.vala  Window.vala  meson.build
src/configs/: Constants.vala  Settings.vala
src/controllers/: AppController.vala  ViewController.vala
src/views/: AppView.vala  InitialView.vala  LogInView.vala  SyncView.vala  ViewConf.vala
src/widgets/: HeaderBar.vala
tests/: test.vala  vgrive_tests.vala
tests/fixtures/: .muse.txt  Enllaç_CARPETA_TEST  muse.txt  muse_new_to_upload.txt  muse_new_to_upload.v2.txt  muse_new_to_upload.v3.txt
